--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -4,6 +4,7 @@
 
   @media screen and (max-width: 900px) {
     width: 580px;
+    max-width: 90%;
   }
   @media screen and (max-width: 500px) {
     width: 335px;
